# smaji_god

./: README.adoc  god.opam  god.xsd  god.xsd.xml  smaji_god.opam
src/: README.md  animate.ml  animate.mli  dune  god.ml  rect.ml  smaji_god.ml  smaji_god.mli
