opam-version: "2.0"
maintainer: "zandoye@gmail.com"
authors: [ "ZAN DoYe" ]
homepage: "https://github.com/kandu/god/"
bug-reports: "https://github.com/kandu/god/issues"
license: "MIT"
dev-repo: "git+https://https://github.com/kandu/god"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.1"}
  "dune" {>= "1.6.0"}
  "glyph_outline"
]
synopsis: ""
description: """
"""
